# future-os

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUTURE.md  LICENSE  Makefile  README.md  README.zh-CN.md  TEST_COVERAGE_REPORT.md  WORKTREE_DESIGN.md  a.sh  go.mod  go.sum  rust-toolchain.toml  人类独有洞察.md
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/workflows/: build-macos-signed.yml  build-selfhosted.yml  build-windows-signed.yml  build.yml  ci.yml  desktop-build.yml  publish-wiki.yml  release.yml
.hermes/plans/: 2026-05-10_193000-go-extension-alignment.md  tui-alignment-ts.md
DEV_MD/: INTERRUPT_ANALYSIS.md
agent/: Cargo.toml  build.rs  demo_4tools.md  demo_write.md  programming_poem.txt  section_demo.md  table.md
agent-models/: Cargo.toml  models.json
agent-models/src/: lib.rs
agent/models/: Cargo.toml
agent/scripts/: convert_go_models.py  generate_models.py  test_grpc.py  test_grpc.sh
agent/src/: lib.rs  logfile.rs  main.rs
agent/src/agent/: mod.rs  run_loop.rs
agent/src/auth/: mod.rs
agent/src/compaction/: mod.rs
agent/src/config/: mod.rs
agent/src/engine/: mod.rs
agent/src/events/: mod.rs
agent/src/grpc/: mod.rs
agent/src/llm/: helpers.rs  mod.rs
agent/src/models/: future.rs  mod.rs
agent/src/models/builtin/: mod.rs  models.json
agent/src/prompt/: mod.rs
agent/src/rpc/: approval.rs  approval_policy.rs  commands.rs  mod.rs  prompt_helpers.rs  protocol.rs  session.rs  session_prompt.rs
agent/src/rpc/session_prompt/: build_user_message_tests.rs  tests.rs
agent/src/sandbox/: mod.rs  paths.rs  rules.rs  seatbelt.rs  windows.rs  windows_plan.rs
agent/src/session/: mod.rs
agent/src/skills/: mod.rs
agent/src/tools/: cmd_exe_rewrite.rs  mod.rs
agent/src/types/: mod.rs
agent/src/utils/: mod.rs
agent/tests/: compaction_persist.rs  sandbox_smoke.rs  session_load_test.rs
channel/: build.rs
channel/src/: grpc_client.rs  main.rs
channel/tests/: agent_integration_test.rs
channels/: Cargo.toml  build.rs  futureos_logo_design_rationale.md
channels/proto/: feishu_ws.proto
channels/src/: config.rs  grpc_client.rs  main.rs  tls.rs
channels/src/dingtalk/: bridge.rs  card.rs  config.rs  dingtalk_rest.rs  dingtalk_ws.rs  mod.rs
channels/src/feishu/: bridge.rs  card.rs  config.rs  feishu_rest.rs  feishu_ws.rs  mod.rs  policy.rs  prompt_loop.rs  session_store.rs
channels/tests/: agent_integration_test.rs
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: constants.ts  help.ts  index.ts  types.ts
cmd/cobalt/: args.go  main.go
cmd/cobalt-web/: main.go
cmd/xihu/: args.go  check_cfg_test.go  config.go  main.go  main_helpers.go
cmd/xihu-web/: main.go
deploy/nats/: README.md  docker-compose.yml  nats.conf
docs/: WIKI-MAINTENANCE.md  banner.md  compaction.md  pi-vs-future-tui-audit.md  remote-control-auth.md  remote-control-plan.md  remote-control-relay.md  remote-control-status.md  tui-test-guide.md  user-guide.md  wiki-prompt-en.md  wiki-prompt.md
docs/wiki/: CLI.md  FAQ.md  Home.md  Installation.md  Quick-Start.md  Settings.md  Skills.md  TUI.md  Using-FutureOS.md  _Footer.md  _Sidebar.md
future-agent/: Cargo.toml
future-agent/src/: lib.rs  main.rs
future-tui/: tsconfig.build.json
future-tui/src/: app.ts  index.ts  keybindings.ts  keys.ts  terminal-image.ts  theme.ts  (+2 more)
gui/: APPROVAL_PLAN.md  ATTACHMENT_PLAN.md  CLAUDE.md  COLOR.md  ER.md  LOGIN.md  MEMORY_PLAN.md  MIGRATION_REPORT.md  P2_APPROVAL_MODEL.md  PLAN.md  PRODUCT.md  REFACTOR.md  SANDBOX_PLAN.md  SHADOW_REVIEW_DESIGN.md  SHADOW_REVIEW_PLAN.md  eslint.config.mjs  index.html  package-lock.json  package.json  refactor.md  stylelint.config.mjs  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: build_ico.ps1  icon.icns
gui/src-tauri/icons/backup/: icon.icns
gui/src-tauri/src/: agent_bridge.rs  agent_proto.rs  agent_providers.rs  agent_supervisor.rs  approval_rules.rs  auth_store.rs  build_info.rs  config_io.rs  error.rs  fs_commands.rs  future_login.rs  future_platform.rs  git_diff_parse.rs  git_review.rs  lib.rs  main.rs  menu.rs  proc.rs  run_error.rs  shadow_review.rs  skills.rs  skills_bootstrap.rs  store.rs
gui/src-tauri/src/agent_bridge/: approval.rs  client.rs  headless.rs  import.rs  mod.rs  models.rs  persist.rs  review.rs  run_control.rs  session.rs  skills.rs  stream.rs
gui/src-tauri/src/agent_providers/: catalog.rs  mod.rs  tests.rs  validate.rs  write.rs
gui/src-tauri/src/commands/: agent.rs  app.rs  approvals.rs  artifacts.rs  debug.rs  files.rs  login.rs  messages.rs  mod.rs  providers.rs  references.rs  remote.rs  review.rs  runs.rs  settings.rs  skills.rs  threads.rs  update.rs  workspaces.rs
gui/src-tauri/src/remote/: commands.rs  mod.rs  pairing.rs
gui/src-tauri/src/shadow_review/: diff.rs  last_run.rs  maintenance.rs  policy.rs  repository.rs  snapshot.rs
gui/src-tauri/src/store/: app_settings.rs  approval_config.rs  approvals.rs  artifacts.rs  cleanup.rs  db.rs  markdown_refs.rs  messages.rs  models.rs  record_macro.rs  records.rs  research.rs  review.rs  review_snapshots.rs  runs.rs  schema.rs  status.rs  support.rs  threads.rs  util.rs  workspace_files.rs  workspaces.rs
gui/src-tauri/src/store/markdown_refs/: extract.rs  metadata.rs  mod.rs  resolve.rs  search.rs  sync.rs
posters/: prompt.json
proto/: future.proto
remote/: Cargo.toml  build.rs
remote/src/: agent_client.rs  config.rs  main.rs
remote/web/: index.html
scripts/: agent-profile-bench.sh  banner-png.py  banner.sh  build-macos-dmg.sh  build-windows-installer.ps1  build-windows-portable.ps1  generate_models.py  publish-wiki.sh  setup-ossutil.sh  sign-file.ps1  start-gui-test.bat  start-gui-test.sh  test-ps-exitcode.ps1  version.mjs
tui/: loop-engineering-guide.md  package-lock.json  package.json  pi-vs-xihu-comparison.md  subtitle.txt  test-sessions.cjs  tsconfig.build.json  tsconfig.json
ui/: package-lock.json  package.json
(+687 files in other folders)
