[package]
name = "future-agent"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "future-agent"
path = "src/main.rs"

[lib]
name = "future_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", features = ["stream", "json", "native-tls", "blocking"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
notify = "6"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
schemars = "0.8"
rand = "0.8"
sha2 = "0.10"
base32 = "0.5"
fd-lock = "4"
signal-hook = "0.3"
atty = "0.2"
shellexpand = "3"
async-trait = "0.1"
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tower-http = { version = "0.6", features = ["cors"] }

# Kill the whole bash process group on abort/timeout (not just the direct child)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Proto codegen (for building .proto files)
[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"

# CI/local release builds are compile-time bound, not runtime bound (the agent is
# an I/O-heavy gRPC server). Trade a little codegen optimization for parallelism
# and drop debug info so linking and disk I/O shrink. See ../.cargo/config.toml.
[profile.release]
codegen-units = 256
debug = false
strip = true
