[package]
name = "future-agent"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "future-agent"
path = "src/main.rs"

[lib]
name = "future_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "blocking"], default-features = false }
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
notify = "6"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
schemars = "0.8"
rand = "0.8"
sha2 = "0.10"
base32 = "0.5"
base64 = "0.22"
# Decode/resize/re-encode user-attached images before sending them to a vision
# model (downscale oversized images so they don't blow up the LLM request).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
fd-lock = "4"
signal-hook = "0.3"
atty = "0.2"
shellexpand = "3"
async-trait = "0.1"
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tower-http = { version = "0.6", features = ["cors"] }

# Kill the whole bash process group on abort/timeout (not just the direct child)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows: Job Object for process-tree kill; restricted token + ACLs for the
# bash sandbox (SANDBOX_PLAN §11). Feature set grows with W1b.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# Proto codegen (for building .proto files)
[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"

# Drop debug info and strip symbols so release links faster and ships smaller
# (the agent is an I/O-bound gRPC server — no runtime cost). See ../.cargo/config.toml.
# codegen-units=16 parallelises codegen across more LLVM threads; the generated
# model catalog (3800+ entries) dominates compile time and optimising it heavily
# gives negligible runtime benefit.
[profile.release]
debug = false
strip = true
codegen-units = 16
lto = false
opt-level = 2
