[package]
name = "future-agent"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "future-agent"
path = "src/main.rs"

[lib]
name = "future_agent"
path = "src/lib.rs"

[features]
# Heap (memory) profiling via dhat.  Build with `--features dhat-heap` and
# run with `--profile-heap <PATH>` to get a dhat-heap JSON report.
dhat-heap = ["dep:dhat"]

[dependencies]
tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3"
reqwest = { workspace = true, features = ["stream", "json", "rustls-tls", "blocking"] }
futures.workspace = true
futures-util.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
notify = "6"
walkdir = "2"
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
regex = "1"
schemars = "0.8"
rand = "0.8"
sha2 = "0.10"
base32 = "0.5"
base64.workspace = true
# Decode/resize/re-encode user-attached images before sending them to a vision
# model (downscale oversized images so they don't blow up the LLM request).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
fd-lock = "4"
signal-hook = "0.3"

shellexpand = "3"
async-trait.workspace = true
# gRPC
tonic.workspace = true
prost.workspace = true
prost-types = "0.13"
tower-http = { version = "0.6", features = ["cors"] }

# Optional: heap profiling support (feature `dhat-heap`).  The global
# allocator shim lives in main.rs and is compiled only with the feature.
dhat = { version = "0.3", optional = true }

# Kill the whole bash process group on abort/timeout (not just the direct child)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Profiling flamegraph output uses inferno behind the scenes.
[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.13", features = ["flamegraph"] }

# Windows: Job Object for process-tree kill; restricted token + ACLs for the
# bash sandbox (SANDBOX_PLAN §11). Feature set grows with W1b.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# Proto codegen (for building .proto files)
[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
