[package]
name = "future-channel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "future-channel"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["__rustls-tls"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
url = "2"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
