[package]
name = "future-channel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "future-channel"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
parking_lot.workspace = true
tokio-tungstenite = { version = "0.24", features = ["__rustls-tls"] }
rustls = "0.23"
rustls-platform-verifier = { version = "0.5", default-features = false }
tokio-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["stream", "json", "rustls-tls", "multipart"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
url = "2"
async-trait.workspace = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
