[package]
name = "future-remote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "future-remote"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-nats = "0.49"
bytes = "1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
