[package]
name = "future-agent-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Lightning-fast release: 72K lines of struct literals don't benefit from
# deep optimisation.  opt-level=1 + 16 codegen units + no LTO.
[profile.release]
opt-level = 1
lto = false
codegen-units = 16
debug = false
strip = true
