[package]
name = "futureos"
version = "0.0.0"
description = "FutureOS desktop agent workspace"
authors = ["FutureOS"]
edition = "2021"

[lib]
name = "futureos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["time"] }
async-nats = "0.37"
futures = "0.3"
tauri-plugin-dialog = "2"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

# Stripped symbols + no debug info: smaller desktop binary and less link/scan
# I/O, negligible runtime cost for a Tauri shell. See ../../.cargo/config.toml.
[profile.release]
debug = false
strip = true
