[package]
name = "futureos"
version = "0.0.0"
description = "FutureOS desktop agent workspace"
authors = ["FutureOS"]
edition = "2021"

[lib]
name = "futureos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["time"] }
async-nats = "0.49"
futures = "0.3"
tauri-plugin-dialog = "2"
# System opener for paths/URLs (ShellExecuteW on Windows — never `cmd /C start`,
# whose re-parsing of `&`/`^`/`%VAR%` in arguments is an injection vector).
open = "5"
base64 = "0.22"
# Decode + downscale image attachments into thumbnails on the Rust side (avoids
# shipping the full-size image base64 over the IPC bridge to a webview canvas).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
# Workspace file `@`-mention picker: gitignore-aware directory walk + fuzzy rank.
ignore = "0.4"
fuzzy-matcher = "0.3"

# Win32 API for high-quality window icon (taskbar clarity). Loads the ICO file
# with proper multi-size support instead of Tauri's single-size GDI HICON.
# Target-specific on purpose: an unconditional dep pulls the `windows` crate
# into every platform's dependency graph, and windows v0.61's transitive
# windows-future conflicts with windows-core on macOS, breaking that build.
# Gating it on cfg(target_os = "windows") keeps it out of non-Windows graphs
# entirely while still satisfying the `use windows::...` in lib.rs on Windows.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

# Stripped symbols + no debug info: smaller desktop binary and less link/scan
# I/O, negligible runtime cost for a Tauri shell. See ../../.cargo/config.toml.
[profile.release]
debug = false
strip = true
